public/css/gno.css
/* ... */
/*
.cell4-gno-second-bigger {
    width: 75px!important;
    float: left;
    padding: 2px 5px;
    height: 43px;
}*/

.table-border-gno {
    border-left-color: #3b4172;
    border-left-style: solid;
    border-left-width: 1px;
}

.table-border-gno-top {
    border-top-color: #3b4172;
    border-top-style: solid;
    border-top-width: 1px;
}

.table-border-gno-right {
    border-right-color: #3b4172;
    border-right-style: solid;
    border-right-width: 1px;
}

.select-well {
    float: left;
    /*font-weight: bold;*/
    margin-bottom: 10px;
    font-size: 14px;
}

/* .tables-one {}

.tables-two {} */

.select-gno {
    /* width: 100%; */
    /* text-align: center; */
    background: #20274e;
    color: white;
    border-color: transparent;
    border-width: 1px;
    margin-left: -16px;
    padding: 0px 0px 0px 9px;
    outline: none;
}

.select-gno2 {
    width: 95px;
    /* text-align: center; */
    background-color: #494aa5;
    color: white;
    /* border: 1px solid #00CCFF; */
    outline: none;
    /*обводка inputov - */
    border-width: 0px;
    /*обводка inputov -*/
    /* margin-left: -16px; */
    /* padding: 0px 10px 4px 0px; */
    height: 24px;
    margin-top: -1px;
    /*background: ;*/
}

.select-gno2:invalid:focus {
    background: red;
}

/*
select:invalid:not(:focus) {
  color: gray;
}

select:focus option {
  color: initial;
}*/

input.checkbox0 {
    margin-top: 2px;
    position: relative;
    float: right;
}

.apexcharts-menu-item {
    color: black;
}

/* CSS hidden table

.spoiler>input+.box {
    display: none;
}

.spoiler>input:checked+.box {
    display: block;
}
*/

.spoiler>input+.box>blockquote {
    display: none;
}

.spoiler>input:checked+.box>blockquote {
    display: block;
}

.spoiler>input[type="checkbox"] {
    cursor: pointer;
    border-color: transparent!important;
    border-style: none!important;
    background: transparent none!important;
    position: relative;
    z-index: 1;
    margin: -10px 0 -30px -470px;
}

.spoiler>input[type="checkbox"]:focus {
    outline: none;
    /* Убираем обводку в ИЕ8 при "фокусе" */
}

.spoiler span.closer, .spoiler span.open {
    padding-left: 22px;
    /* color: #00f!important; */
    text-decoration: underline;
}

.spoiler>input+.box>span.closer {
    display: none;
}

.spoiler>input:checked+.box>span.closer {
    display: inline;
}

.spoiler>input:checked+.box>span.open {
    display: none;
}

.spoiler>input+.box>span.open {
    display: inline;
}

.spoiler blockquote, .spoiler {
    overflow-x: hidden;
}

blockquote {
    width: 100%;
}

span.open, span.closer {
    margin-left: -50px;
    margin-top: 10px;
    font-size: 12px;
}

.spoiler {
    font-size: 14px;
    position: relative;
    background: #272953;
    padding: 8px;
    text-align: left;
    margin-bottom: 5px;
}

.spoiler.opened {
    height: 288px;
}

.spoiler:last-child {
    margin-bottom: 0;
}

.spoiler-device {
    background: #272953;
}

.relative {
    position: relative;
    float: left;
}

.left-center {
    margin-left: 15px;
}

.text1 {
    margin-left: 10px;
}

.text2 {
    margin-left: 92px;
}

input.checkbox2 {
    float: left;
    margin-left: 55px;
    outline: none;
    border: 0px;
}

.inclinom-button {
    float: left;
    font-size: 16px;
    font-weight: bold;
    background-color: rgba(41, 54, 136, 1);
    cursor: pointer;
    user-select: none;
    padding: 8px 30px;
    height: 38px;
    width: 100%;
    /* margin-top: -53px; */
    border-radius: 5px;
    box-shadow: 0px 8px 15px rgba(58, 55, 55, 0.1);
    /* box-shadow: inset 0 0 4px 0px rgba(0, 0, 0, .8), inset rgb(0 0 0 / 21%) -5px -5px 8px 5px, inset rgb(255 255 255 / 14%) 5px 5px 8px 5px, 1px 1px 1px rgba(255, 255, 255, .1), -2px -2px 5px rgba(0, 0, 0, .5); */
    text-align: center;
    margin-bottom: 5px;
}

/* .inclinom:hover {
    background-color: #1b6bb0;
    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.29);
    color: #fff;
    transform: translateY(-7px);
  } */

.inclinom-button:active {
    background-color: #144079;
    box-shadow: 0 2px #666;
    transform: translateY(0.02px);
    filter: blur(0.3px);
}

.inclinom-button:hover {
    background-color: #484749;
}

.text3 {
    /* width: 20px; */
}

input.checkbox3 {
    margin-right: 8px;
}

.target {
    float: left;
}

.square2 {
    /* border: 1px solid #00CCFF; */
    background: rgba(76, 190, 237, 0.278431);
    outline: none;
    width: 60px;
    height: 20px;
    position: relative;
    color: white;
    top: 0;
    padding-right: 5px;
    padding-left: 5px;
    line-height: 25px !important;
}

.center {
    margin-top: 10px;
}

input[type="radio"] {
    /* Base Styles aka unchecked */
    font-weight: 300;
    font-size: 16px;
    color: #237DEB;
}

input[type="radio"]:not(:checked) {
    /* Explicit Unchecked Styles */
    border: 1px solid #FF0000;
}

input[type="radio"]:checked {
    /* Checked Styles */
    font-weight: 900;
    color: #237DEB;
}

input[type="text"]:disabled.square2 {
    background:rgba(50, 51, 112, 1);
    color: #928f8f;
    outline: none;
    border: 0;
    /* background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAKrVq36zwjjgzhhYWGMYAEYB8RmROaABADeOQ8CXl/xfgAAAABJRU5ErkJggg==) repeat; */
}

input[type="text"]:enabled.square2 {
    background: #494AA5;
    outline: none;
    border: 0;
}

.square3 {
    background: #494AA5;
    border: 1px solid #272953;
    outline: none;
    width: 100px;
    height: 22px;
    color: white;
    box-sizing: border-box;
    border-radius: 2px;
    line-height: 25px !important;
    padding-right: 5px;
    padding-left: 5px;
}

.square3:focus {
    background: #5657c7;
}

.square3:disabled {
    color: #928f8f;
    background: #353e70;
}

input[type="text"]:enabled.square3 {
}

iframe.iframe {
    width: 1300px;
    height: 500px;
}

.tables-string-gno44-inner {
    padding: 15px 0px;
    height: 100%;
    background-color: #2b2e5e;
    margin-bottom: 5px;
}
/* ... */

